...
                  SizedBox(
                    height: 80.0,
                    width: 80.0,
                    child: FittedBox(

                      child: FloatingActionButton(
                        key:Key('backff'),
                        onPressed: () {
                          Navigator.of(context).pop();
                        },
                        child: const Icon(
                          Icons.arrow_back_rounded,
                          color: Colors.white,
...
                mainAxisAlignment: MainAxisAlignment.center,
                children: [
                  SizedBox(
                      width: 250,
                      height: 60,
                      child: TextButton(
                        key:Key('addmoneybtn'),
                        onPressed: () {
                          Navigator.push(
                              context,
                              MaterialPageRoute(
                                  builder: (context) => AddMoneyForm()));
                        },
...
