...
  @override
  Widget build(BuildContext context) {
    return Scaffold(
      appBar: AppBar(
        title: const Text('Accounts'),
        leading: IconButton(
            key:Key('bkp'),
            onPressed: () {
              Navigator.of(context).pop();
            },
            splashRadius: 20,
            icon: const Icon(
              Icons.arrow_back_ios_outlined,
...
              }
            } else {
              return Center(child: const CircularProgressIndicator());
            }
          }),
      floatingActionButton: FloatingActionButton.extended(
        key:Key('fabaddacc'),
        onPressed: () {
          Navigator.push(context,
              MaterialPageRoute(builder: (context) => const AccDetails()));
        },
        icon: const Icon(Icons.add),
        label: const Text('Add Account'),
...
