...
                      'SIGN UP',
                    )),
                const SizedBox(
                  width: 20,
                ),
                ElevatedButton(
                    key:Key('startpgln'),
                    style: ElevatedButton.styleFrom(),
                    onPressed: () {
                      Navigator.of(context).push(MaterialPageRoute(
                          builder: (context) => const LoginPage()));
                    },
                    child: const Text(
...
